# todoki

./: .gitignore  ADMIN_GUIDE.md  AGENTS.md  Cargo.toml  DEPLOY.md  Dockerfile  Makefile  README.md  agent-bus.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  test_auth.py  test_streaming.py
.github/workflows/: release.yml  snapshot.yaml
api/: .env.example  .pdm-python  pyproject.toml  schema.sql
api/alembic/: env.py
api/alembic/versions/: 547270e12193_initial_schema.py  a8f4c3d91b25_add_from_state_to_task_events.py  e21b3ff6c788_kanban_status.py
api/app/: config.py  deps.py  main.py
api/app/ai/: client.py
api/app/core/: base.py  database.py  exceptions.py
api/app/models/: __init__.py  task.py
api/app/routers/: report.py  tasks.py
api/app/schemas/: report.py  task.py
api/app/services/: report_service.py  task_service.py
api/tests/: conftest.py  test_tasks.py
config/: default.toml
crates/mock-agent/: Cargo.toml  EVENT_HANDLING.md
crates/mock-agent/examples/: event_demo.rs  simple_event_test.sh  test_event_handling.sh
crates/mock-agent/src/: main.rs
crates/todoki-protocol/: Cargo.toml
crates/todoki-protocol/src/: event_bus.rs  lib.rs
crates/todoki-relay/: Cargo.toml
crates/todoki-relay/examples/: event_poller_example.rs
crates/todoki-relay/src/: acp.rs  config.rs  event_bus_client.rs  event_poller.rs  lib.rs  main.rs  relay.rs  session.rs
crates/todoki-relay/tests/: integration_test.rs
crates/todoki-server/: Cargo.toml
crates/todoki-server/src/: main.rs
crates/todoki-server/src/api/: agent_stream.rs  agents.rs  artifacts.rs  event_bus.rs  event_bus_ws.rs  mod.rs  projects.rs  relays.rs  report.rs  tasks.rs
crates/todoki-server/src/auth/: mod.rs
crates/todoki-server/src/config/: mod.rs
crates/todoki-server/src/db/: service.rs
crates/todoki-server/src/event_bus/: kinds.rs  mod.rs  orchestrator.rs  publisher.rs  store.rs  subscriber.rs  types.rs
crates/todoki-server/src/models/: agent.rs  artifact.rs  mod.rs  task.rs
crates/todoki-server/src/permission_reviewer/: mod.rs
crates/todoki-server/src/relay/: manager.rs  mod.rs  request_tracker.rs
crates/todoki-server/tests/: websocket_integration.rs
docs/: CREATE_EVENT_MODAL.md  DOCKER_REGISTRY.md  EVENTTIMELINE_FINAL_SUMMARY.md  EVENTTIMELINE_USAGE_GUIDE.md  EVENT_TIMELINE_INTEGRATION.md  PHASE2_COMPLETION.md  PHASE2_IMPLEMENTATION.md  PHASE2_QUICKSTART.md  PHASE2_TESTING.md  PHASE3_COMPLETION.md  PHASE3_TESTING.md  WEBSOCKET_EVENTS.md  event-bus-design.md  task-lifecycle-events.md
examples/: websocket_client.py
migrations/: 001_todoki_initial.sql  002_agents.sql  003_add_agent_role.sql  004_add_projects.sql  005_add_agent_project.sql  006_task_execute_support.sql  007_artifacts.sql  008_add_artifact_task_id.sql  009_create_events_table.sql  010_agent_subscriptions.sql  011_insert_human_agent.sql  012_insert_system_agent.sql  013_cleanup_agent_fields.sql  014_remove_events_session_fk.sql
scripts/: admin.py  deploy-prod.sh  run_integration_tests.sh
src/: main.rs
src/api/: agent_stream.rs  agents.rs  error.rs  mod.rs  projects.rs  relays.rs  tasks.rs
src/config/: mod.rs
src/db/: mod.rs  service.rs
src/models/: agent.rs  mod.rs  project.rs  report.rs  task.rs
src/relay/: broadcaster.rs  manager.rs  mod.rs
todoki-relay/: Cargo.toml
todoki-relay/src/: acp.rs  config.rs  main.rs  protocol.rs  relay.rs  session.rs
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.tsx  server-bindings.ts
web/src/api/: agents.ts  client.ts  eventBus.ts  fetcher.ts  projects.ts  relays.ts  schema.d.ts  tasks.ts  types.ts
web/src/components/: ArchivedTaskItem.tsx  ArtifactPreview.test.tsx  ArtifactPreview.tsx  CanAccess.tsx  CreateEventModal.tsx  EventTimeline.tsx  HabitItem.tsx  NavBar.tsx  PreviewTaskItem.tsx  ProjectTaskList.tsx  TaskDetailPanel.tsx  TaskItem.tsx  TaskItemDetail.tsx  TimelineTaskItem.tsx
web/src/components/chat/: AssistantMessage.tsx  ConversationView.tsx  PermissionMessage.tsx  PlanMessage.tsx  SystemMessage.tsx  ToolCallMessage.tsx  ToolResultMessage.tsx  index.ts  types.ts
web/src/components/ui/: select.tsx
web/src/hooks/: useAgentStream.ts  useEventStream.test.ts  useEventStream.ts  useProjectRelays.ts  useProjects.ts  useTasks.ts  useUserSession.ts
web/src/lib/: auth.ts  schema.ts  taskStatus.ts
web/src/modals/: ProjectManageModal.tsx  ProjectSelectModal.tsx  TaskCreateModal.test.tsx  TaskCreateModal.tsx  TaskItemEditModal.tsx  index.tsx
web/src/pages/: Agents.tsx  Backlog.tsx  EventTimelineDemo.tsx  EventsPage.tsx  Habits.tsx  Homepage.tsx  Inbox.test.tsx  Inbox.tsx  Later.tsx  Login.tsx  NotFound.tsx  Profile.tsx  Projects.test.tsx  Projects.tsx  Report.tsx  TaskDetail.tsx  Timeline.tsx  Today.tsx  TokenInput.tsx
web/src/providers/: AuthContext.tsx  AuthProvider.tsx
web/src/router/: PrivateRoute.tsx  PublicRoute.tsx  RouteList.tsx
web/src/services/: api.ts  interceptors.ts
web/src/utils/: constants.ts  taskParser.ts
