[workspace]
resolver = "2"
members = [
    "crates/todoki-protocol",
    "crates/todoki-server",
    "crates/todoki-relay",
    "crates/mock-agent",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"
anyhow = "1"
futures-util = "0.3"
async-trait = "0.1"
todoki-protocol = { path = "crates/todoki-protocol" }
gotcha = { git = "https://github.com/Kilerd/gotcha.git", branch = "main" }
