[package]
name = "mock-agent"
version = "0.1.0"
edition.workspace = true
publish = false

[[bin]]
name = "mock-agent"
path = "src/main.rs"

[dependencies]
agent-client-protocol = { version = "0.9.3", features = ["unstable"] }
tokio = { version = "1", features = ["full", "io-std"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
