[package]
name = "todoki-relay"
version = "0.1.0"
edition.workspace = true
description = "Remote agent relay for todoki"

[lib]
name = "todoki_relay"
path = "src/lib.rs"

[[bin]]
name = "todoki-relay"
path = "src/main.rs"

[dependencies]
# Shared protocol
todoki-protocol.workspace = true

# Async runtime
tokio.workspace = true

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# URL parsing
url = "2"

# Hostname
hostname = "0.4"

# Machine ID for stable relay ID
machine-uid = "0.5"
sha2 = "0.10"
hex = "0.4"

# ACP protocol for Claude Code
agent-client-protocol = { version = "0.9.3", features = ["unstable"] }
async-trait.workspace = true
tokio-util = { version = "0.7", features = ["compat"] }
openssl = { version = "0.10", features = ["vendored"] }

# Regex for artifact detection
regex = "1"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
